--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ color:#ffffff;
 		
 		</div>
 		<div id="wrapper1">
-        <img src="images/rails.png" id="rails" width="75" style="position:absolute;margin-left:550px;margin-top:-110px" />
+        <img src="images/rails1.png" id="rails" width="75px" style="position:absolute;margin-left:550px;margin-top:-110px" />
+        
+        <img src="images/ruby.png" id="rails" width="75" style="position:absolute;margin-left:670px;margin-top:-110px" />
         <div id="timer_label13" class="timer_labels1">We are launching on 29<sup>th</sup> April, 2011.</div>
 	<div id="timer_label12" class="timer_labels1">Time Remaining:</div></div>
 <div id="wrapper">
