--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ color:#ffffff;
 		<div id="wrapper1">
         <img src="images/rails.png" id="rails" height="75px" style="position:absolute;margin-left:680px;margin-top:-110px" />
         
-        <img src="images/ruby.png" id="ruby" width="75" style="position:absolute;margin-left:780px;margin-top:-110px" />
+        <img src="images/ruby.png" id="ruby" width="70px" style="position:absolute;margin-left:780px;margin-top:-110px" />
         
         <img src="images/os.png" id="os" width="90" style="position:absolute;margin-left:880px;margin-top:-110px" />
         <div id="timer_label13" class="timer_labels1">We are launching on 29<sup>th</sup> April, 2011.</div>
