--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ color:#ffffff;
 	<div id="timer_label12" class="timer_labels1">Time Remaining:</div></div>
 <div id="wrapper">
 	<div id="countdown"></div><!--close countdown-->
+    <img src="images/one.png" width="1000" height="67" style="position:absolute;margin-top:255px" />
+   
+		
 </div><!--close wrapper-->
 
 
@@ -111,7 +114,6 @@ color:#ffffff;
 											</div>
 
 
-		
 														
 </body>
 </html>
